Start using scss

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -162,7 +162,7 @@ a.secondary {
 }
 
 @media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
+  // .logo {
+  //   filter: invert();
+  // }
 }
