Layout and styling updates

--- a/components/Header.module.scss
+++ b/components/Header.module.scss
@@ -1,13 +1,50 @@
+
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  flex-direction: row;
+  padding: 5px 15px;
   border-bottom: 1px solid #eaeaea;
+  background-color: #FFE9CD;
+  height: 100%;
+  margin-right: 10px;
+  border-bottom-right-radius: 20px;
+  
   a {
     display: inline-block;
     margin: 0 1rem;
     color: #000;
     text-decoration: underline;
   }
+}
+
+.user {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.userInfo {
+  display: flex;
+  flex-direction: column;
+}
+
+.nickName {
+  font-size: 1rem;
+}
+
+.userName {
+  font-size: 0.75rem;
+  color: #666;
+}
+
+.coins {
+  font-size: 1.25rem;
+}
+
+.avatar {
+  border-radius: 15px;
+  border: 2px solid #666;
 }
