--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
 :root {
-  --background: #ffffff;
+  --background: #fff8ff4;
   --foreground: #171717;
 }
 
@@ -8,6 +8,11 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+}
+
+
+html, * {
+  font-family: var(--font-chewy);
 }
 
 html,
