--- a/components/AuthLayout.module.scss
+++ b/components/AuthLayout.module.scss
@@ -1,7 +1,7 @@
 .authLayout {
     display: grid;
     grid-template-columns: 200px 1fr;
-    grid-template-rows: 100px 1fr max-content;
+    grid-template-rows: 60px 1fr max-content;
     grid-template-areas:
         "header header"
         "sidebar content"
@@ -11,20 +11,33 @@
 
 .header {
     grid-area: header;
-    background-color: green;
+
 }
 
 .sidebar {
     grid-area: sidebar;
-    background-color: red;
+    
 }
 
 .content {
     grid-area: content;
-    background-color: blue;
+
 }
 
 .footer {
     grid-area: footer;
-    background-color: purple;
+
+}
+
+.drawer {
+    position: fixed;
+    top: 0;
+    right: -400px;
+    height: 100vh;
+    width: 400px;
+    &.open {
+        right: 0;
+        transition: right 0.5s ease-in-out;
+    }
+    background-color: pink;
 }
