--- a/components/Inventory.module.scss
+++ b/components/Inventory.module.scss
@@ -1,18 +1,26 @@
 .inventory {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+
+.inventoryItem {
+  display: flex;
   flex-direction: column;
+  gap: 16px;
+  width: max-content;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.08);
+  padding: 16px;
+  h2 {
+    font-size: 14px;
+  }
 
-  .inventory-item {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-
-    .inventory-item-name {
-      font-size: 24px;
-      font-weight: 600;
-      line-height: 32px;
-      letter-spacing: -0.01em;
-      margin: 0;
-    }
+  .inventory-item-name {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    letter-spacing: -0.01em;
+    margin: 0;
   }
 }
