--- a/components/Sidebar.module.scss
+++ b/components/Sidebar.module.scss
@@ -1,10 +1,20 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 30px;
   padding: 10px;
   list-style-type: none;
   align-items: center;
   background-color: #FFE9CD;
   border-bottom-right-radius: 15px;
+  &>li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+    &>a {
+      width: 100%;
+    }
+  }
 }
