--- a/components/Sidebar.module.scss
+++ b/components/Sidebar.module.scss
@@ -13,7 +13,7 @@
     align-items: center;
     align-content: center;
     width: 100%;
-    &>a {
+    &>a, &>button {
       width: 100%;
     }
   }
