--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #FFF6F3;
 }
 
 * {
@@ -44,4 +45,15 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+h1 {
+  color: #FFE9CD;
+  font-size: 50px;
+  text-align: center;
+  background: -webkit-linear-gradient(#FFC94D, #B3872D);
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
