--- a/components/Header.module.scss
+++ b/components/Header.module.scss
@@ -10,7 +10,8 @@
   background-color: #FFE9CD;
   height: 100%;
   margin-right: 10px;
-  border-bottom-right-radius: 20px;
+  border-radius: 20px;
+  border-bottom-left-radius: 0px;
   
   a {
     display: inline-block;
