--- a/components/LandingPage.module.scss
+++ b/components/LandingPage.module.scss
@@ -4,4 +4,16 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  color: white;
+}
+
+.bgImage {
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  object-fit: cover;
 }
